# keras-convattention

./: .bumpversion.cfg  .gitignore  README.md  laeeq.txt  pyproject.toml
.github/workflows/: python-publish.yml
examples/: Try.py  benchmark.py  optimize.py
examples/.ipynb_checkpoints/: Benchmark_Testing-checkpoint.ipynb
examples/checkpoint/: lstm_attention_model.json  lstm_cnn_attention_model.json
src/keras_convattention/: attention.py  convattention.py
tests/: test_convattention.py
